--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,187 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".MainActivity"
+    android:background="#afa083">
 
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        >
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:layout_height="match_parent">
 
-            <!-- Media -->
-            <ImageView
-                android:id="@+id/imagePreview"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="260dp"
-                android:contentDescription="@string/content_description_media"
-                app:srcCompat="@drawable/imagebackground" />
+                android:layout_height="200px"
+                android:layout_margin="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                app:cardCornerRadius="10dp"
+                android:padding="80dp"
+                android:id="@+id/hii_card"
+                app:cardElevation="5dp">
 
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <!-- Title, secondary and supporting text -->
-
-
-                <EditText
-                    android:id="@+id/fileName"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:hint="Enter File Name"
-                    android:textAppearance="?attr/textAppearanceBody2"
-                    android:textColor="?android:attr/textColorSecondary" />
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="129dp"
-                    android:orientation="horizontal">
-
-
-                    <Button
-                        android:id="@+id/cameraBtn"
-                        android:layout_width="119dp"
-                        android:layout_height="67dp"
-                        android:background="@android:color/transparent"
-                        android:drawableTop="@drawable/camera"
-                        android:onClick="cameraActionBtn"
-                        android:text="@string/Camera"
-                        android:textColor="@android:color/holo_blue_dark"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.124"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.724"
-                        tools:ignore="MissingConstraints" />
-
-                    <Button
-                        android:id="@+id/galleryBtn"
-                        android:layout_width="100dp"
-                        android:layout_height="68dp"
-                        android:layout_marginEnd="16dp"
-                        android:background="@android:color/transparent"
-                        android:drawableTop="@drawable/gallery"
-                        android:onClick="galleryActionBtn"
-
-                        android:text="@string/Gallery"
-                        android:textColor="@android:color/holo_blue_bright"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.54"
-                        app:layout_constraintStart_toEndOf="@+id/cameraBtn"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.721"
-                        tools:ignore="MissingConstraints" />
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="10dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Not Required File Name"
-                        android:textAppearance="?attr/textAppearanceBody2"
-                        android:textColor="#ff066060"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.923"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.054"
-                        tools:ignore="MissingConstraints" />
+                        android:text="Hii!"
+                        android:textColor="#536DFE"
+                        android:textSize="22dp"
+                        android:textStyle="bold" />
+<View
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    />
+                    <View
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="15dp"
+                        android:background="@drawable/ic_sharp_account_circle_24"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="113dp"
-                    android:orientation="horizontal">
-
-
-                    <SeekBar
-                        android:id="@+id/seekBarQuality"
-                        android:layout_width="266dp"
-                        android:layout_height="69dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.494"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.59" />
-
-                    <TextView
-                        android:id="@+id/seekBarQualityLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Select Image ."
-                        android:textAppearance="?attr/textAppearanceBody2"
-                        android:textColor="?android:attr/textColorSecondary"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.059"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.074"
-                        tools:ignore="MissingConstraints" />
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="500dp"
+    android:layout_below="@+id/hii_card"
+    android:layout_margin="20dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="10dp">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:src="@drawable/image_bg"/>
 
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </LinearLayout>
+</androidx.cardview.widget.CardView>
+        </RelativeLayout>
 
-            <!-- Buttons -->
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:orientation="horizontal">
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:text="SaveFile"
-                    android:textColor="@android:color/holo_green_light"
-                    android:id="@+id/saveFileActionBtn"
-                    android:onClick="saveFileActionBtn"
-                    style="?attr/borderlessButtonStyle"
-                    />
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Clear"
-                    android:textColor="@android:color/holo_red_light"
-                    android:onClick="clearActionBtn"
-                    style="?attr/borderlessButtonStyle"
-                    />
-            </LinearLayout>
 
-        </LinearLayout>
-
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.core.widget.NestedScrollView>
 
 
 
-
-
-</LinearLayout>
-
-</ScrollView>
+</RelativeLayout>
