--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:background="#afa083">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -16,6 +17,7 @@
             android:layout_height="match_parent">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/hii_card"
                 android:layout_width="match_parent"
                 android:layout_height="200px"
                 android:layout_margin="10dp"
@@ -23,9 +25,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
-                app:cardCornerRadius="10dp"
                 android:padding="80dp"
-                android:id="@+id/hii_card"
+                app:cardCornerRadius="10dp"
                 app:cardElevation="5dp">
 
                 <LinearLayout
@@ -42,39 +43,178 @@
                         android:textColor="#536DFE"
                         android:textSize="22dp"
                         android:textStyle="bold" />
-<View
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    />
+
+                    <View
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
                     <View
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_margin="15dp"
-                        android:background="@drawable/ic_sharp_account_circle_24"/>
+                        android:background="@drawable/ic_sharp_account_circle_24" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-<androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="500dp"
-    android:layout_below="@+id/hii_card"
-    android:layout_margin="20dp"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="10dp">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:src="@drawable/image_bg"/>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/imageViewCard"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_below="@+id/hii_card"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
 
-</androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:id="@+id/imagePreview"
+                        android:layout_width="match_parent"
+                        android:layout_height="340dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/image_bg" />
+
+                    <EditText
+                        android:id="@+id/fileName"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:background="#FF6E40"
+                        android:fontFamily="monospace"
+                        android:hint="@string/enter_file_name"
+                        android:padding="10dp"
+                        android:textAppearance="?attr/textAppearanceBody2"
+                        android:textColor="?android:attr/textColorSecondary"
+                        android:textColorHint="#fff"
+                        android:textColorLink="#FF5252"
+                        android:textFontWeight="@integer/material_motion_duration_long_2"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/snackbar_box"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/actionButtons"
+
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <SeekBar
+                    android:id="@+id/seekBarQuality"
+                    android:layout_width="340dp"
+                    android:layout_height="62dp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/seekBarQualityLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:text="Select Image ."
+                    android:textAlignment="center" />
+            </androidx.cardview.widget.CardView>
+
+
+            <LinearLayout
+                android:id="@+id/actionButtons"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imageViewCard"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:backgroundTint="#FF6E40"
+
+                    >
+
+                    <Button
+                        android:id="@+id/cameraBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:drawableLeft="@drawable/ic_baseline_photo_camera_24"
+                        android:onClick="cameraActionBtn"
+                        android:text="Take Pic"
+                        android:textAllCaps="false" />
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/galleryView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#FFAB40"
+
+                    >
+
+                    <Button
+                        android:id="@+id/galleryBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:drawableLeft="@drawable/ic_baseline_image_24"
+                        android:onClick="galleryActionBtn"
+                        android:text="@string/Gallery"
+                        android:textAllCaps="false" />
+
+                </androidx.cardview.widget.CardView>
+
+
+            </LinearLayout>
+
+
         </RelativeLayout>
 
 
     </androidx.core.widget.NestedScrollView>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="30dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="20dp"
+                        android:backgroundTint="#FF7043">
 
+        <Button
+            android:id="@+id/saveFileActionBtn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:onClick="saveFileActionBtn"
+            android:fontFamily="serif-monospace"
+            android:textFontWeight="900"
+            android:textStyle="bold"
+            android:textColorHighlight="#00ffff"
+            android:text="@string/save_file"
+            android:textColor="#fff"
+            android:textSize="18dp"
+            android:textAllCaps="false" />
+
+
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
