--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
-    android:background="#afa083">
+    android:background="#FEDDC5">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScroll"
@@ -39,8 +39,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Hii!"
-                        android:textColor="#536DFE"
+                        android:text="Image Resizer"
+                        android:textColor="#E65100"
                         android:textSize="22dp"
                         android:textStyle="bold" />
 
@@ -53,7 +53,9 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_margin="15dp"
-                        android:background="@drawable/ic_sharp_account_circle_24" />
+                        android:backgroundTint="#FF5252"
+                        android:onClick="galleryActionListBtn"
+                        android:background="@drawable/gallery" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -80,14 +82,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="340dp"
                         android:scaleType="fitXY"
-                        android:src="@drawable/image_bg" />
+                        android:src="@drawable/image_resizer_logo"
+                        />
 
                     <EditText
                         android:id="@+id/fileName"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
-                        android:background="#FF6E40"
+                        android:background="#654E47"
                         android:fontFamily="monospace"
                         android:hint="@string/enter_file_name"
                         android:padding="10dp"
@@ -109,7 +112,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/actionButtons"
-
+                android:background="#FEDDC5"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
@@ -121,8 +124,8 @@
                     android:id="@+id/seekBarQuality"
                     android:layout_width="340dp"
                     android:layout_height="62dp"
-                    android:padding="15dp"
-                    android:layout_margin="20dp" />
+                    android:layout_margin="20dp"
+                    android:padding="15dp" />
 
                 <TextView
                     android:id="@+id/seekBarQualityLabel"
@@ -132,12 +135,6 @@
                     android:text="Select Image ."
                     android:textAlignment="center" />
 
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="list"
-                    android:textColor="@color/white"
-                    android:onClick="galleryActionListBtn"/>
             </androidx.cardview.widget.CardView>
 
 
@@ -153,7 +150,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:backgroundTint="#FF6E40"
+                    android:backgroundTint="#FE904D"
 
                     >
 
